snesh/window_deep.css
#tabbrowser-tabbox, #zen-tabbox-wrapper {
    background-color: rgba(5, 5, 5, .18) !important;
    box-shadow: inset 0px 2px 0px 0px #00000020, inset 0px 2px 8px 0px #00000040 !important;
    border-radius: 12px !important;
    margin: 2px 3px 2px 2px !important;    
}

